Hero section numbers fixed padding for better view on mobile version

--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,10 @@ body {
   .hero {
   background-position: 50%;
   }
+
+  .offer-section-title {
+    padding: 30px;
+  }
 }
 
 
